[gd_scene load_steps=64 format=2]

[ext_resource path="res://Sprites/jump.png" type="Texture" id=1]
[ext_resource path="res://Sprites/little_walky-sheet.png" type="Texture" id=2]
[ext_resource path="res://Sprites/sprout_idle.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Sprout.gd" type="Script" id=4]
[ext_resource path="res://Scripts/SproutAnim.gd" type="Script" id=5]
[ext_resource path="res://Sprites/Lift.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Drop.png" type="Texture" id=7]
[ext_resource path="res://Sprites/carrywalk.png" type="Texture" id=8]
[ext_resource path="res://Sprites/carryidle.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Climb_into-sheet.png" type="Texture" id=10]
[ext_resource path="res://Shaders/ColorChangeShader.tres" type="Shader" id=11]
[ext_resource path="res://Sprites/climb_out-spritesheet.png" type="Texture" id=12]

[sub_resource type="ShaderMaterial" id=51]
shader = ExtResource( 11 )
shader_param/color = Color( 0.627451, 0, 0.737255, 1 )
shader_param/intensity = null

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 32, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 96, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 160, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 192, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 30 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 30 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 30 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 30 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 30 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 30 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 8 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": true,
"name": "pot_enter",
"speed": 10.0
}, {
"frames": [ SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ) ],
"loop": false,
"name": "pot_exit",
"speed": 10.0
}, {
"frames": [ SubResource( 35 ) ],
"loop": true,
"name": "pot_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "pot_lift",
"speed": 10.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "pot_place",
"speed": 10.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "pot_walk",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 6.5, 13 )

[sub_resource type="CircleShape2D" id=18]
radius = 19.0

[sub_resource type="CircleShape2D" id=36]
radius = 9.0

[node name="Sprout" type="KinematicBody2D"]
collision_mask = 5
script = ExtResource( 4 )
GRAVITY = 14.0
JumpHeight = 400.0
is_first_sprout = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 51 )
frames = SubResource( 15 )
animation = "pot_exit"
frame = 6
playing = true
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 3 )
shape = SubResource( 16 )

[node name="Coyote" type="Timer" parent="."]
one_shot = true

[node name="Buffer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="PickupRange" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupRange"]
shape = SubResource( 18 )

[node name="AreaOfRedundance" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="aor" type="CollisionShape2D" parent="AreaOfRedundance"]
position = Vector2( 0, 4 )
shape = SubResource( 36 )

[node name="RootAttachPoint" type="RigidBody2D" parent="."]
position = Vector2( 0, -7 )
mode = 1

[connection signal="animation_finished" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_animation_finished"]
[connection signal="dropped" from="AnimatedSprite" to="." method="_on_AnimatedSprite_dropped"]
[connection signal="entered" from="AnimatedSprite" to="." method="_on_AnimatedSprite_entered"]
[connection signal="exited" from="AnimatedSprite" to="." method="_on_AnimatedSprite_exited"]
[connection signal="grabbed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_grabbed"]
[connection signal="timeout" from="Coyote" to="." method="on_coyote_timeout"]
[connection signal="timeout" from="Buffer" to="." method="on_buffer_timeout"]
[connection signal="area_entered" from="PickupRange" to="." method="_on_PickupRange_area_entered"]
[connection signal="area_exited" from="PickupRange" to="." method="_on_PickupRange_area_exited"]
[connection signal="body_entered" from="AreaOfRedundance" to="." method="_on_AreaOfRedundance_body_entered"]
[connection signal="body_exited" from="AreaOfRedundance" to="." method="_on_AreaOfRedundance_body_exited"]
